# skill-retrieval-mcp

./: .gitignore  README.md  ROADMAP.md  dev.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/examples/ci-cd-pipeline/: SKILL.md
data/examples/code-review/: SKILL.md
data/examples/debug-memory-leak/: SKILL.md
data/examples/debug-python/: SKILL.md
data/examples/docker-containerize/: SKILL.md
data/examples/error-handling/: SKILL.md
data/examples/git-commit-message/: SKILL.md
data/examples/git-resolve-conflicts/: SKILL.md
data/examples/integration-testing/: SKILL.md
data/examples/refactor-code/: SKILL.md
data/examples/rest-api-design/: SKILL.md
data/examples/test-driven-development/: SKILL.md
data/examples/write-api-docs/: SKILL.md
data/examples/write-readme/: SKILL.md
data/examples/write-unit-tests/: SKILL.md
scripts/: restructure_hf_index.py
src/skill_mcp/: __init__.py  cli.py  config.py  dedup.py  embeddings.py  hub.py  index.py  retriever.py  schema.py  server.py  store.py
src/skill_mcp/importers/: anthropic.py  base.py  directory.py  frontmatter.py  langskills.py  skillnet.py
tests/: test_retriever.py  test_server.py  test_store.py  test_workflow.py
