[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-retrieval-mcp"
version = "0.1.0"
description = "Lightweight MCP Server for RAG-based skill retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Zhan Cheng", email = "zcheng256@gmail.com"},
]
keywords = ["mcp", "skill-retrieval", "rag", "ai-agents", "faiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "click>=8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/JayCheng113/skill-retrieval-mcp"
Repository = "https://github.com/JayCheng113/skill-retrieval-mcp"
Issues = "https://github.com/JayCheng113/skill-retrieval-mcp/issues"

[project.optional-dependencies]
openai = ["openai>=1.50", "tiktoken>=0.7"]
local = ["sentence-transformers>=3.0"]
ollama = ["httpx>=0.27"]
hf = ["huggingface-hub>=0.20"]
sse = ["starlette>=0.27", "uvicorn>=0.20"]
all = ["openai>=1.50", "tiktoken>=0.7", "sentence-transformers>=3.0", "httpx>=0.27", "huggingface-hub>=0.20", "starlette>=0.27", "uvicorn>=0.20"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
skill-mcp = "skill_mcp.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
